feat: add jwt auth tokens and middlewares
